# Trade-app

./: .gitignore  NIFTY_Options_AlgoSystem_PRD.docx  NIFTY_Options_AlgoSystem_PRD.md  README.md  start.py
backend/: start_sidecar.ps1
backend/feed_handler/: Cargo.toml
backend/feed_handler/src/: client.rs  core_bridge.rs  main.rs  parser.rs  server.rs  socketio.rs  state.rs
backend/trading_core/: Cargo.toml  README.md
backend/trading_core/src/: lib.rs
backend/trading_core/src/audit/: ledger.rs  mod.rs  persistent_ledger.rs  record.rs
backend/trading_core/src/contracts/: ids.rs  market.rs  mod.rs  orders.rs  signals.rs
backend/trading_core/src/control/: kill_switch.rs  mod.rs  mode.rs
backend/trading_core/src/data/: candle.rs  candle_builder.rs  engine.rs  mod.rs  replay.rs  snapshot_cache.rs  tick.rs  tick_store.rs
backend/trading_core/src/execution/: broker.rs  kotak_sidecar.rs  mod.rs  paper.rs  router.rs
backend/trading_core/src/features/: engine.rs  frame.rs  mod.rs  option_context.rs
backend/trading_core/src/models/: baseline_regime.rs  mod.rs
backend/trading_core/src/risk/: decision.rs  governor.rs  limits.rs  mod.rs  state.rs
backend/trading_core/src/runtime/: mod.rs  model.rs  shadow_engine.rs  strategy.rs  supervisor.rs
backend/trading_core/src/strategies/: expiry_scalper.rs  mod.rs
backend/trading_core/tests/: feature_model_strategy.rs  kotak_sidecar_mapping.rs  market_data_engine.rs  persistent_audit.rs  shadow_engine.rs  supervisor_smoke.rs
frontend/: package-lock.json  package.json
frontend2/: index.html  package-lock.json  (+1 more)
(+79 files in other folders)
