[package]
name        = "feed_handler"
version     = "0.1.0"
edition     = "2021"
description = "Lightspeed Kotak Neo WebSocket feed handler for Tradesk"

[dependencies]
tokio            = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util     = "0.3"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
axum             = { version = "0.7", features = ["ws"] }
tower-http       = { version = "0.5", features = ["cors"] }
reqwest          = { version = "0.12", features = ["json"] }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
