[package]
name = "trading_core"
version = "0.1.0"
edition = "2021"
description = "Low-latency autonomous trading core for Tradesk"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
